--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,22 @@
 	<title>Contact List App</title>
 </head>
 <body>
-	<div class="container">
+	<div class="container" ng-controller="AppCtrl">
 		<h1>Contact List App</h1>
 
-</div>
-<input ng-model="test">
-{{test}}
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Email</th>
+					<th>Number</th>
+				</tr>
+			</thead>
+		</table>
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+	</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
+<script src="controllers/controller.js"></script>
 </body>
 </html>
