--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,13 @@
 					<th>Number</th>
 				</tr>
 			</thead>
+			<tbody>
+				<tr ng-repeat="contact in contactlist">
+					<td>{{contact.name}}</td>
+					<td>{{contact.email}}</td>
+					<td>{{contact.number}}</td>
+				</tr>
+			</tbody>
 		</table>
 
 	</div>
